--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,7 +16,9 @@ DB_POOL_SIZE=10
 DB_SSL=false
 
 # JWT Authentication
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Generate a secure JWT_SECRET using:
+# node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
